added description and keywords into Head for SEO Optimizatin

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="David Bedoya" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <!-- TOD add key word and description metatags -->
+    <meta name="description" content="Specialty Coffee" />
+    <meta name="keywords" content="recipes book a table menu contacts coffee" />
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
