--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <body>
     <div class="page">
       <p>TESTING</p>
-      <header></header>
-      <main>
+      <header class="header"></header>
+      <main class="content">
         <section class="recipes"></section>
         <section class="reservation"></section>
         <section class="menu"></section>
