--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           <ul class="nav__links">
             <li><a href="#recipes" class="nav__link">Recipes</a></li>
             <li><a href="#menu" class="nav__link">Menu</a></li>
-            <li><a href="#booking" class="nav__link">Book a table</a></li>
-            <li><a href="#contacts" class="nav__link">Contacts</a></li>
+            <li><a href="#reservation" class="nav__link">Book a table</a></li>
+            <li><a href="#about" class="nav__link">Contacts</a></li>
           </ul>
         </nav>
         <h1 class="header__title">
@@ -67,6 +67,7 @@
           <ul class="recipes__videos">
             <li>
               <iframe
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=v0yogWBuBoh-Z2oY"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -80,6 +81,7 @@
             </li>
             <li>
               <iframe
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=2rDF6R_10Dua7ThT"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -92,9 +94,9 @@
             </li>
           </ul>
         </section>
-        <section class="reservation"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
+        <section id="reservation" class="reservation"></section>
+        <section id="menu" class="menu"></section>
+        <section id="about" class="about"></section>
       </main>
       <footer class="footer"></footer>
     </div>
