--- a/index.html
+++ b/index.html
@@ -94,7 +94,58 @@
             </li>
           </ul>
         </section>
-        <section id="reservation" class="reservation"></section>
+        <section id="reservation" class="reservation">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="reservation__form form">
+            <fieldset class="form__fieldset">
+              <label for="name" class="form__label">Name *</label>
+              <input
+                type="text"
+                class="form__input"
+                id="name"
+                name="name"
+                placeholder="Name Surname"
+              />
+              <label for="number-of-guests" class="form__label">
+                Number of guests *
+              </label>
+              <input
+                type="number"
+                class="form__input"
+                id="number-of-guests"
+                name="number-of-guests"
+                placeholder="1-8"
+                min="1"
+                max="8"
+              />
+              <label for="date&time" class="form__label">Date & time *</label>
+              <input
+                class="form__input"
+                type="datetime-local"
+                name="date&time"
+                id="date&time"
+              />
+              <label for="email" class="form__label" for="">Your email *</label>
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="email@email.com"
+                class="form__input"
+              />
+            </fieldset>
+            <button class="form__button" type="submit">Book a table</button>
+            <label class="form__label form__label_type_checkbox" for="checkbox">
+              <input
+                type="checkbox"
+                class="form__checkbox"
+                name="checkbox"
+                id="checkbox"
+              />
+              I agree with the terms of use
+            </label>
+          </form>
+        </section>
         <section id="menu" class="menu"></section>
         <section id="about" class="about"></section>
       </main>
