--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 name="date&time"
                 id="date&time"
               />
-              <label for="email" class="form__label" for="">Your email *</label>
+              <label for="email" class="form__label">Your email *</label>
               <input
                 type="email"
                 name="email"
