--- a/index.html
+++ b/index.html
@@ -247,9 +247,59 @@
             </li>
           </ul>
         </section>
-        <section id="about" class="about"></section>
+        <section id="about" class="about">
+          <h2 class="about__title">
+            <span class="about__title_span"> About the </span> coffee shop
+          </h2>
+          <div class="about__content">
+            <p class="about__paragraph">
+              Our coffee shop is located in the Triple Peaks Library. It
+              features 6 tables and free WiFi.
+            </p>
+            <p class="about__paragraph">
+              Our main mission is keeping guests cozy and energized.
+            </p>
+            <p class="about__paragraph">
+              Besides that, we try to reduce our environmental impact — so we
+              don't sell single-use cups. But you can buy one of our reusable
+              cups!
+            </p>
+          </div>
+          <div class="about__circle"></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
+        </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__content">
+          <img
+            src="./images/logo_coffeeshop_light.svg"
+            alt="coffee shop logo"
+            class="footer__logo"
+          />
+          <div class="footer__column">
+            <h2 class="footer__social-heading">Social media</h2>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <img
+                  src="./images/facebook_white.svg"
+                  alt="Facebook Logo"
+                  class="footer__social-icon"
+                />
+                <a href="" class="footer__social-link">Facebook</a>
+              </li>
+              <li class="footer__list-item">
+                <img
+                  src="./images/instagram_white.svg"
+                  alt="Instagram Logo"
+                  class="footer__social-icon"
+                />
+                <a href="" class="footer__social-link">Instagram</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p class="footer__copyright">© 2023 David Bedoya</p>
+      </footer>
     </div>
   </body>
 </html>
