--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                   alt="Facebook Logo"
                   class="footer__social-icon"
                 />
-                <a href="" class="footer__social-link">Facebook</a>
+                <a href="#" class="footer__social-link">Facebook</a>
               </li>
               <li class="footer__list-item">
                 <img
@@ -293,7 +293,7 @@
                   alt="Instagram Logo"
                   class="footer__social-icon"
                 />
-                <a href="" class="footer__social-link">Instagram</a>
+                <a href="#" class="footer__social-link">Instagram</a>
               </li>
             </ul>
           </div>
